--- a/nb/eval_model.ipynb
+++ b/nb/eval_model.ipynb
@@ -43,8 +43,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T08:19:35.674003453Z",
-     "start_time": "2023-11-25T08:19:35.514285850Z"
+     "end_time": "2023-12-11T04:17:02.546736789Z",
+     "start_time": "2023-12-11T04:17:02.402959229Z"
     }
    },
    "id": "74a7bb00f3b42746"
@@ -67,9 +67,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(urllib3.connectionpool) 2023-11-25 17:19:42 [DEBUG]: Starting new HTTPS connection (1): huggingface.co:443\n",
-      "(urllib3.connectionpool) 2023-11-25 17:19:42 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
-      "(urllib3.connectionpool) 2023-11-25 17:19:43 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n"
+      "(urllib3.connectionpool) 2023-12-11 13:17:19 [DEBUG]: Starting new HTTPS connection (1): huggingface.co:443\n",
+      "(urllib3.connectionpool) 2023-12-11 13:17:20 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
+      "(urllib3.connectionpool) 2023-12-11 13:17:20 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n"
      ]
     }
    ],
@@ -90,8 +90,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T08:19:45.363743573Z",
-     "start_time": "2023-11-25T08:19:40.415534682Z"
+     "end_time": "2023-12-11T04:17:22.401924581Z",
+     "start_time": "2023-12-11T04:17:17.572903035Z"
     }
    },
    "id": "initial_id"
@@ -127,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(gentcr) 2023-11-25 17:19:47 [INFO]: Loaded immunecode data from ../output/immunecode.data.csv, df.shape: (554707, 12)\n",
+      "(gentcr) 2023-12-11 13:17:29 [INFO]: Loaded immunecode data from ../output/immunecode.data.csv, df.shape: (554707, 12)\n",
       "eval_ds.df.shape: (554707, 12)\n"
      ]
     },
@@ -150,8 +150,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T08:19:47.608748857Z",
-     "start_time": "2023-11-25T08:19:46.861543484Z"
+     "end_time": "2023-12-11T04:17:29.583282103Z",
+     "start_time": "2023-12-11T04:17:28.771026568Z"
     }
    },
    "id": "8964d1791e267fe5"
@@ -177,11 +177,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(gentcr) 2023-11-25 17:19:50 [INFO]: Loaded shomuradova_minervina_gfeller data from ../output/shomuradova_minervina_gfeller.data.csv, df.shape: (1160, 12)\n",
-      "(gentcr) 2023-11-25 17:19:50 [INFO]: Excluding immunecode data by column: index from shomuradova_minervina_gfeller\n",
-      "(gentcr) 2023-11-25 17:19:54 [INFO]: Current shomuradova_minervina_gfeller data.shape: (1060, 12)\n",
-      "(gentcr) 2023-11-25 17:19:54 [INFO]: Excluding immunecode data by column: cdr3b_seq from shomuradova_minervina_gfeller\n",
-      "(gentcr) 2023-11-25 17:19:58 [INFO]: Current shomuradova_minervina_gfeller data.shape: (975, 12)\n",
+      "(gentcr) 2023-12-11 13:17:38 [INFO]: Loaded shomuradova_minervina_gfeller data from ../output/shomuradova_minervina_gfeller.data.csv, df.shape: (1160, 12)\n",
+      "(gentcr) 2023-12-11 13:17:38 [INFO]: Excluding immunecode data by column: index from shomuradova_minervina_gfeller\n",
+      "(gentcr) 2023-12-11 13:17:42 [INFO]: Current shomuradova_minervina_gfeller data.shape: (1060, 12)\n",
+      "(gentcr) 2023-12-11 13:17:42 [INFO]: Excluding immunecode data by column: cdr3b_seq from shomuradova_minervina_gfeller\n",
+      "(gentcr) 2023-12-11 13:17:46 [INFO]: Current shomuradova_minervina_gfeller data.shape: (975, 12)\n",
       "eval_ds.df.shape: (975, 12)\n"
      ]
     },
@@ -205,8 +205,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T08:19:58.848786701Z",
-     "start_time": "2023-11-25T08:19:50.632906255Z"
+     "end_time": "2023-12-11T04:17:46.580327372Z",
+     "start_time": "2023-12-11T04:17:38.426954648Z"
     }
    },
    "id": "f50b2f5c8a07d856"
@@ -241,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>> Mean similarity score of base model: 0.7044615384615385\n"
+      ">>> Mean similarity score of base model: 0.7059794871794872\n"
      ]
     }
    ],
@@ -257,21 +257,19 @@
     "               n_samples=32,\n",
     "               tokenizer=None,\n",
     "               epitope_seq_mutator=None,\n",
-    "               target_seq_mutator=None,\n",
-    "               seq_format='{epitope_seq}{target_seq}'):\n",
+    "               target_seq_mutator=None):\n",
     "    \n",
     "    epitope_seqs = ds.df[CN.epitope_seq].values[:n_samples]\n",
     "    target_seqs = ds.df[CN.cdr3b_seq].values[:n_samples]\n",
     "    input_seqs = [\n",
-    "        seq_format.format(epitope_seq=e_seq, target_seq=t_seq)  for e_seq, t_seq in zip(epitope_seqs, target_seqs)\n",
+    "        f'{e_seq}{t_seq}'  for e_seq, t_seq in zip(epitope_seqs, target_seqs)\n",
     "    ]\n",
     "\n",
     "    collator = EpitopeTargetMaskedLMCollator(tokenizer=tokenizer, \n",
     "                                             epitope_seq_mutator=epitope_seq_mutator, \n",
     "                                             target_seq_mutator=target_seq_mutator,\n",
     "                                             max_epitope_len=ds.max_epitope_len,\n",
-    "                                             max_target_len=ds.max_target_len,\n",
-    "                                             seq_format=seq_format)\n",
+    "                                             max_target_len=ds.max_target_len)\n",
     "    data_loader = DataLoader(ds, batch_size=n_samples, shuffle=False, collate_fn=collator)\n",
     "    \n",
     "    batch = next(iter(data_loader))\n",
@@ -301,23 +299,23 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T08:21:46.297363715Z",
-     "start_time": "2023-11-25T08:20:13.536751215Z"
+     "end_time": "2023-12-11T04:20:41.271612900Z",
+     "start_time": "2023-12-11T04:19:37.489460578Z"
     }
    },
    "id": "cf0d01d274a8c5d"
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(urllib3.connectionpool) 2023-11-25 17:22:58 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
-      "(urllib3.connectionpool) 2023-11-25 17:22:59 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
-      ">>> Mean similarity score of fine-tuned model: 0.7216933333333334\n"
+      "(urllib3.connectionpool) 2023-12-11 13:21:03 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
+      "(urllib3.connectionpool) 2023-12-11 13:21:03 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
+      ">>> Mean similarity score of fine-tuned model: 0.725057435897436\n"
      ]
     }
    ],
@@ -338,8 +336,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T08:24:35.090848614Z",
-     "start_time": "2023-11-25T08:22:58.718098559Z"
+     "end_time": "2023-12-11T04:22:09.275857201Z",
+     "start_time": "2023-12-11T04:21:03.008477544Z"
     }
    },
    "id": "a10ba20a933df2a"
@@ -380,15 +378,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(urllib3.connectionpool) 2023-11-25 17:25:24 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
-      "(urllib3.connectionpool) 2023-11-25 17:25:24 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
-      ">>>> Mean similarity score of fine-tuned model: 0.8590153846153846\n"
+      "(urllib3.connectionpool) 2023-12-11 13:29:43 [DEBUG]: Resetting dropped connection: huggingface.co\n",
+      "(urllib3.connectionpool) 2023-12-11 13:29:44 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
+      "(urllib3.connectionpool) 2023-12-11 13:29:44 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
+      ">>>> Mean similarity score of fine-tuned model: 0.8579979487179488\n"
      ]
     }
    ],
@@ -411,8 +410,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T08:27:01.407260059Z",
-     "start_time": "2023-11-25T08:25:24.245284261Z"
+     "end_time": "2023-12-11T04:30:51.771177050Z",
+     "start_time": "2023-12-11T04:29:43.620435540Z"
     }
    },
    "id": "1955b7678d2d443"
@@ -451,15 +450,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(urllib3.connectionpool) 2023-11-25 17:29:11 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
-      "(urllib3.connectionpool) 2023-11-25 17:29:11 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
-      ">>>> Mean similarity score of fine-tuned model: 0.8649661538461539\n"
+      "(urllib3.connectionpool) 2023-12-11 13:31:37 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
+      "(urllib3.connectionpool) 2023-12-11 13:31:37 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
+      ">>>> Mean similarity score of fine-tuned model: 0.8635148717948719\n"
      ]
     }
    ],
@@ -482,8 +481,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T08:30:48.331392920Z",
-     "start_time": "2023-11-25T08:29:11.128683767Z"
+     "end_time": "2023-12-11T04:32:46.159222572Z",
+     "start_time": "2023-12-11T04:31:37.131635315Z"
     }
    },
    "id": "abf4ee087dda1979"
@@ -503,11 +502,53 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "## Experiment 4\n",
+    "- Mutation ratio: 0.15->0.2 and 0.15->0.25 for epitope and TCR CDR3beta sequences, respectively"
+   ],
    "metadata": {
     "collapsed": false
    },
-   "id": "9c9ae1b7020e1561"
+   "id": "150463fce0a9f4d4"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(urllib3.connectionpool) 2023-12-11 13:43:38 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
+      "(urllib3.connectionpool) 2023-12-11 13:43:38 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
+      ">>>> Mean similarity score of fine-tuned model: 0.6601989743589743\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = load_peft_model('../output/exp4/mlm_finetune/checkpoint-1404')\n",
+    "\n",
+    "target_seq_mutator.mut_ratio = 0.5\n",
+    "target_seq_mutator.mut_probs = [0.8, 0.2]\n",
+    "# score = eval_model(target_model=base_model, ds=eval_ds, n_samples=len(eval_ds),\n",
+    "#                    tokenizer=tokenizer, \n",
+    "#                    epitope_seq_mutator=None, \n",
+    "#                    target_seq_mutator=target_seq_mutator)\n",
+    "# print(f'>>>> Mean similarity score of base model: {score}')\n",
+    "score = eval_model(target_model=model, ds=eval_ds, n_samples=len(eval_ds),\n",
+    "                   tokenizer=tokenizer, \n",
+    "                   epitope_seq_mutator=None, \n",
+    "                   target_seq_mutator=target_seq_mutator)\n",
+    "print(f'>>>> Mean similarity score of fine-tuned model: {score}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-11T04:44:46.275651800Z",
+     "start_time": "2023-12-11T04:43:37.989073288Z"
+    }
+   },
+   "id": "85d3ddabaed31bbf"
   },
   {
    "cell_type": "markdown",
