--- a/nb/eval_model.ipynb
+++ b/nb/eval_model.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -43,8 +43,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-23T06:51:47.096085979Z",
-     "start_time": "2023-12-23T06:51:46.865346334Z"
+     "end_time": "2023-12-25T06:18:27.353558755Z",
+     "start_time": "2023-12-25T06:18:27.309995290Z"
     }
    },
    "id": "74a7bb00f3b42746"
@@ -61,15 +61,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(urllib3.connectionpool) 2023-12-23 15:53:17 [DEBUG]: Starting new HTTPS connection (1): huggingface.co:443\n",
-      "(urllib3.connectionpool) 2023-12-23 15:53:18 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n",
-      "(urllib3.connectionpool) 2023-12-23 15:53:18 [DEBUG]: https://huggingface.co:443 \"HEAD /facebook/esm2_t33_650M_UR50D/resolve/main/config.json HTTP/1.1\" 200 0\n"
+      "(transformers.configuration_utils) 2023-12-25 15:18:50 [INFO]: loading configuration file config.json from cache at /data/hf/hub/models--facebook--esm2_t33_650M_UR50D/snapshots/08e4846e537177426273712802403f7ba8261b6c/config.json\n",
+      "(transformers.configuration_utils) 2023-12-25 15:18:50 [INFO]: Model config EsmConfig {\n",
+      "  \"architectures\": [\n",
+      "    \"EsmForMaskedLM\"\n",
+      "  ],\n",
+      "  \"attention_probs_dropout_prob\": 0.0,\n",
+      "  \"classifier_dropout\": null,\n",
+      "  \"emb_layer_norm_before\": false,\n",
+      "  \"esmfold_config\": null,\n",
+      "  \"hidden_act\": \"gelu\",\n",
+      "  \"hidden_dropout_prob\": 0.0,\n",
+      "  \"hidden_size\": 1280,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 5120,\n",
+      "  \"is_folding_model\": false,\n",
+      "  \"layer_norm_eps\": 1e-05,\n",
+      "  \"mask_token_id\": 32,\n",
+      "  \"max_position_embeddings\": 1026,\n",
+      "  \"model_type\": \"esm\",\n",
+      "  \"num_attention_heads\": 20,\n",
+      "  \"num_hidden_layers\": 33,\n",
+      "  \"pad_token_id\": 1,\n",
+      "  \"position_embedding_type\": \"rotary\",\n",
+      "  \"token_dropout\": true,\n",
+      "  \"torch_dtype\": \"float32\",\n",
+      "  \"transformers_version\": \"4.36.0.dev0\",\n",
+      "  \"use_cache\": true,\n",
+      "  \"vocab_list\": null,\n",
+      "  \"vocab_size\": 33\n",
+      "}\n",
+      "\n",
+      "(transformers.modeling_utils) 2023-12-25 15:18:50 [INFO]: loading weights file model.safetensors from cache at /data/hf/hub/models--facebook--esm2_t33_650M_UR50D/snapshots/08e4846e537177426273712802403f7ba8261b6c/model.safetensors\n",
+      "(transformers.modeling_utils) 2023-12-25 15:18:51 [INFO]: All model checkpoint weights were used when initializing EsmForMaskedLM.\n",
+      "\n",
+      "(transformers.modeling_utils) 2023-12-25 15:18:51 [INFO]: All the weights of EsmForMaskedLM were initialized from the model checkpoint at facebook/esm2_t33_650M_UR50D.\n",
+      "If your task is similar to the task the model of the checkpoint was trained on, you can already use EsmForMaskedLM for predictions without further training.\n",
+      "(transformers.tokenization_utils_base) 2023-12-25 15:18:52 [INFO]: loading file vocab.txt\n",
+      "(transformers.tokenization_utils_base) 2023-12-25 15:18:52 [INFO]: loading file added_tokens.json\n",
+      "(transformers.tokenization_utils_base) 2023-12-25 15:18:52 [INFO]: loading file special_tokens_map.json\n",
+      "(transformers.tokenization_utils_base) 2023-12-25 15:18:52 [INFO]: loading file tokenizer_config.json\n",
+      "(transformers.tokenization_utils_base) 2023-12-25 15:18:52 [INFO]: loading file tokenizer.json\n"
      ]
     }
    ],
@@ -90,8 +128,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-23T06:53:20.947911939Z",
-     "start_time": "2023-12-23T06:53:15.219881392Z"
+     "end_time": "2023-12-25T06:18:52.084332342Z",
+     "start_time": "2023-12-25T06:18:50.350400697Z"
     }
    },
    "id": "initial_id"
@@ -121,13 +159,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(gentcr) 2023-12-23 15:53:33 [INFO]: Loaded immunecode data from ../output/immunecode.data.csv, df.shape: (554707, 16)\n",
+      "(gentcr) 2023-12-25 15:19:00 [INFO]: Loading data frame with config: {'type': 'ImmuneCODEEpitopeTargetDataset', 'bind_target': 'tcr', 'fn': '../data/ImmuneCODE-MIRA-Release002.1/peptide-detail-ci.csv', 'fn_subject': '../data/ImmuneCODE-MIRA-Release002.1/subject-metadata.csv', 'nodup': True, 'query': '(cdr3b_len >= 8) and (cdr3b_len <= 23)', 'name': 'immunecode'}, args: None\n",
+      "(gentcr) 2023-12-25 15:19:00 [INFO]: Loading ImmuneCODE data from ../data/ImmuneCODE-MIRA-Release002.1/peptide-detail-ci.csv\n",
+      "(gentcr) 2023-12-25 15:19:47 [INFO]: Applying filter: <gentcr.data.EpitopeTargetDataset.NotDuplicateFilter object at 0x7fd4de7e1f40>\n",
+      "(gentcr) 2023-12-25 15:19:47 [INFO]: Drop duplicates with the same index\n",
+      "(gentcr) 2023-12-25 15:19:47 [INFO]: Current df.shape: (555061, 16)\n",
+      "(gentcr) 2023-12-25 15:19:47 [INFO]: After filtering, df.shape: (555061, 16)\n",
+      "(gentcr) 2023-12-25 15:19:47 [INFO]: Applying filter: <gentcr.data.EpitopeTargetDataset.QueryFilter object at 0x7fd4dfeb3fa0>\n",
+      "(gentcr) 2023-12-25 15:19:47 [INFO]: Selecting all epitopes by query: (cdr3b_len >= 8) and (cdr3b_len <= 23)\n",
+      "(gentcr) 2023-12-25 15:19:47 [INFO]: Current df.shape: (554707, 16)\n",
+      "(gentcr) 2023-12-25 15:19:47 [INFO]: After filtering, df.shape: (554707, 16)\n",
+      "(gentcr) 2023-12-25 15:19:47 [INFO]: Done to load data frame. Saving to ../output/immunecode.data.csv, df.shape: (554707, 16)\n",
+      "(gentcr) 2023-12-25 15:19:49 [INFO]: The dataset saved to ../output/immunecode.data.csv\n",
+      "(gentcr) 2023-12-25 15:19:49 [INFO]: Summary of the dataset saved to ../output/immunecode.data.summary.csv\n",
       "eval_ds.df.shape: (554707, 16)\n"
      ]
     },
@@ -150,8 +200,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-23T06:53:33.693334581Z",
-     "start_time": "2023-12-23T06:53:32.713170068Z"
+     "end_time": "2023-12-25T06:19:49.482296636Z",
+     "start_time": "2023-12-25T06:19:00.025699854Z"
     }
    },
    "id": "8964d1791e267fe5"
